<resources>
    <!-- English strings -->
    <string name="app_name" translatable="false">Sell Desk</string>
    <string name="button" translatable="false">button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_new_post">New Post</string>
    <string name="title_messages">Messages</string>

    <string name="category_sample">This is Category</string>
    <string name="key_city">City</string>
    <string name="value_city">Almaty</string>
    <string name="key_generation">Generation</string>
    <string name="value_generation">2017 - 2021 XV70</string>
    <string name="key_mileage">Mileage</string>
    <string name="value_mileage">83,000 km</string>
    <string name="key_transmission">Details</string>
    <string name="value_transmission">Automatic</string>
    <string name="key_drive">Drive</string>
    <string name="value_drive">Front-wheel drive</string>
    <string name="favorites">Favorites</string>
    <string name="add_new">New Post</string>
    <string name="messages">Messages</string>
    <string name="menu">Menu</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="messages_not_found_title">Oops, no messages yet</string>
    <string name="str_title">Selling Car is Easy!</string>
    <string name="create_new_post">Create Post</string>
    <string name="str_subtitle">10 000 customers are waiting for your announcement</string>


</resources>